--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://21521835:1GuCLT7tPAP6514B@cluster0.ushmzto.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=mysecret
+JWT_SECRET=ksy7yMOzS841vWQfRryQcXAkDWE72RzsB7twoH5JQqg=
